EandT/main/default/objects/Invoice__c/fields/Account_Address_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Copy__c</fullName>
    <formula>Account__r.BillingStreet  &amp; 
 IF( LEN( Account__r.BillingCity)>0, BR()  &amp; Account__r.BillingCity ,"") &amp;
 IF( LEN( Account__r.BillingState)>0,BR() &amp; Account__r.BillingState ,"") &amp;  
 IF( LEN( Account__r.BillingPostalCode)>0,BR() &amp; Account__r.BillingPostalCode ,"") &amp;  
 IF( LEN( Account__r.BillingCountry)>0,BR() &amp; Account__r.BillingCountry ,"")</formula>
    <label>Account Address Copy</label>
    <type>Text</type>
</CustomField>