EandT/main/default/objects/Invoice__c/fields/Account_Billing_Contact_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Contact_Copy__c</fullName>
    <formula>Account__r.Billing_Contact__r.Title &amp; " " &amp;
 Account__r.Billing_Contact__r.FirstName &amp; " " &amp;
 Account__r.Billing_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Contact Copy</label>
    <type>Text</type>
</CustomField>