EandT/main/default/objects/Invoice__c/fields/Account_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Copy__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Account Name Copy</label>
    <type>Text</type>
</CustomField>