EandT/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),MONTH(TODAY()),1)-1+30</defaultValue>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>