EandT/main/default/objects/Invoice__c/fields/Invoice_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Phone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Contact Phone</label>
    <type>Text</type>
</CustomField>